tests/error/type_match/base_case_pointer_const_propagation1.bz
// error: unable to match type '*const int32' to '*int32'
// note: mismatched const qualification of types 'const int32' and 'int32'
function test()
{
	let i = 0;
	let cpi: *const int32 = &i;
	let _: *int32 = cpi;
}
